# click-app-copier-template-demo

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update.yml
click-app-copier-template-demo/: .copier-answers.yml  README.md
click-app-copier-template-demo/.github/workflows/: ci.yml  publish.yml
click-app-copier-template-demo/tests/: test_click_app_copier_template_demo.py
click_app_copier_template_demo/: cli.py
tests/: test_click_app_copier_template_demo.py
