[project]
name = "{{ hyphenated }}"
version = "0.1"
description = "{{ description or "" }}"
readme = "README.md"
authors = [{name = "{{ author_name }}"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]
{% if github_username %}
[project.urls]
Homepage = "https://github.com/{{ github_username }}/{{ hyphenated }}"
Changelog = "https://github.com/{{ github_username }}/{{ hyphenated }}/releases"
Issues = "https://github.com/{{ github_username }}/{{ hyphenated }}/issues"
CI = "https://github.com/{{ github_username }}/{{ hyphenated }}/actions"
{% endif %}
[project.scripts]
{{ hyphenated }} = "{{ underscored }}.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "cogapp"]

# see also: https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
select = [
    "E", "F", "I",
    #"D", for now
    "W", "PL", "B", "UP"
]

# Never enforce `E501` (line length violations).
ignore = [
    "E501",
    "PLR2004"# for now
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"*__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
