[project]
name = "click-app-copier-template-demo"
version = "0.1"
description = "Demonstrating https://github.com/kj-9/click-app-copier"
readme = "README.md"
authors = [{name = "kj-9"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kj-9/click-app-copier-template-demo"
Changelog = "https://github.com/kj-9/click-app-copier-template-demo/releases"
Issues = "https://github.com/kj-9/click-app-copier-template-demo/issues"
CI = "https://github.com/kj-9/click-app-copier-template-demo/actions"

[project.scripts]
click-app-copier-template-demo = "click_app_copier_template_demo.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "cogapp"]

# see also: https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff.lint]
select = [
    "E", "F", "I",
    # "D", turn off requiring docstrings
    "W", "PL", "B", "UP"
]

ignore = [
    "E501", # ignore line length violations
    "PLR2004" # ignore magic values, see also: https://docs.astral.sh/ruff/rules/magic-value-comparison/
]

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"] # ignore `E401` (unused import) in all `__init__.py` files

[tool.ruff.lint.pydocstyle]
convention = "google"
